feat: 实现基于 Tailwind 的暗黑模式切换功能
添加了暗黑模式切换按钮，支持用户偏好保存和系统主题同步。在 `tailwind.config.mjs` 中启用 `darkMode: 'class'`，并在布局文件中添加了相关样式和脚本逻辑。

--- a/项目进度报告.md
+++ b/项目进度报告.md
@@ -93,8 +93,9 @@
 4.  **目录 (Table of Contents) 自动生成:**
     *   目标：为较长的文章提供快速导航。
     *   行动：寻找或实现 Astro Markdown 插件生成TOC的功能。
-5.  **(可选) 暗黑模式切换:**
+5.  **[已完成] 暗黑模式切换:**
     *   目标：提供暗黑阅读模式。
+    *   完成：已实现基于 Tailwind 的暗黑模式切换功能，包含用户偏好保存和系统主题同步。
 
 ### 部署
 6.  **配置并完成首次部署:**
