feat: 更新内容集合和搜索索引功能
- 在 `astro.config.mjs` 中启用内容集合功能。
- 更新搜索索引集成逻辑，改用直接读取内容文件以确保数据准确性。
- 完善博客和笔记的搜索数据生成，提取必要的 frontmatter 字段以增强搜索功能。

--- a/项目进度报告.md
+++ b/项目进度报告.md
@@ -127,10 +127,9 @@
     *   行动：寻找或实现 Astro Markdown 插件生成TOC的功能。
     *   优先级：低。
 
-4.  **配置并完成首次部署:**
+4.  **[已完成]配置并完成首次部署:**
     *   目标：将网站部署到 Vercel, Netlify 或 Cloudflare Pages 等平台。
     *   行动：连接 GitHub 仓库，配置构建命令和输出目录。
-    *   优先级：低。
 
 ## 五、潜在风险与挑战
 *   **图片处理优化：** 随着内容增多，可能需要实现图片懒加载和自动优化，以提高页面加载速度。
