docs: 更新项目版本号至v1.1.1并修正部署平台信息
更新了README.md和项目进度报告中的版本号，从v1.1更改为v1.1.1，并修正了部署平台的描述，仅保留Netlify作为部署平台。

--- a/项目进度报告.md
+++ b/项目进度报告.md
@@ -1,4 +1,4 @@
-# 项目进度报告：林大反卷门驻地 - v1.1
+# 项目进度报告：林大反卷门驻地 - v1.1.1
 
 **最后更新日期：** {{{2025-05-13}}}
 
@@ -6,7 +6,7 @@
 
 欢迎来到“林大反卷门驻地”项目进度报告！
 
-经过一段时间的持续开发与优化，我们荣幸地宣布，个人学习与分享平台 **“林大反卷门驻地”正式进入 1.1 版本！**
+经过一段时间的持续开发与优化，我们荣幸地宣布，个人学习与分享平台 **“林大反卷门驻地”正式进入 1.1.1 版本！**
 
 此版本在原有基础上进行了多项功能增强、体验优化和内容扩充，旨在为用户提供一个更美观、更实用、更便捷的知识获取与交流环境。
 
@@ -36,7 +36,7 @@
     *   **英语单词学习：** 创建了独立的英语单词学习板块 (`/vocabulary`)，支持单词管理、学习模式、分类筛选和本地存储。
     *   **开发者模式：** 实现简单的后台管理功能 (`/admin`)，允许博主编辑个人信息和头像（密码保护）。
 5.  **部署与维护：**
-    *   成功将项目部署到线上平台 (如 Vercel/Netlify/Cloudflare Pages)。
+    *   成功将项目部署到线上平台 (Netlify)。
 
 ## 三、v1.1 版本新增与改进
 
