style: 优化文档标签和样式，适配移动端数学公式显示
调整多个文档的标签和分类，使其更准确。在全局样式中添加移动端数学公式的适配样式，确保复杂公式在小屏幕上可水平滚动查看，不影响页面布局。

--- a/src/content/blog/组合数学基础-图论板块.md
+++ b/src/content/blog/组合数学基础-图论板块.md
@@ -2,8 +2,8 @@
 title: "图论基础：理解图的定义"
 description: "对组合数学中图的基本定义进行解析，包括顶点、边、简单无向图、完全图和圈图的概念。"
 date: 2025-05-12 
-tags: ["数学", "组合数学", "图论", "顶点", "边", "完全图", "圈图"]
-category: "组合数学"
+tags: ["顶点", "边", "完全图", "圈图"]
+category: "图论"
 draft: false
 ---
 
