--- a/项目进度报告.md
+++ b/项目进度报告.md
@@ -49,6 +49,12 @@
     *   优化前端逻辑以支持词汇管理功能
     *   集成到现有英语学习模块中，提供更好的学习体验
 
+#### 2. 移动端数学公式显示适配
+*   **问题背景：** 在移动设备上查看包含 LaTeX 数学公式的页面时，部分复杂公式可能会因为宽度超出屏幕范围而显示不全或导致页面布局错乱。
+*   **解决方案：**
+    *   针对 KaTeX 渲染的数学公式，在移动端视图下应用 `overflow-x: auto`样式，使得当公式宽度超过容器宽度时，用户可以通过水平滚动查看完整公式，而不影响整体页面布局。
+    *   确保此样式仅在小屏幕设备上生效，避免在桌面端出现不必要的滚动条。
+
 ### v1.1.4 (之前版本)
 #### 1. 内容创建 - 图片上传功能
 *   **需求背景：** 用户在创建博客或笔记时，无法方便地插入本地图片。
