feat(UI): 为暗黑模式添加内联代码块样式
在暗黑模式下，Markdown 内联代码块的背景颜色过亮，导致代码文本难以辨认。通过调整全局 CSS 样式，为暗黑模式下的内联代码块设置了更深的背景色和合适的文字颜色，确保了良好的可读性。

--- a/项目进度报告.md
+++ b/项目进度报告.md
@@ -55,6 +55,10 @@
     *   针对 KaTeX 渲染的数学公式，在移动端视图下应用 `overflow-x: auto`样式，使得当公式宽度超过容器宽度时，用户可以通过水平滚动查看完整公式，而不影响整体页面布局。
     *   确保此样式仅在小屏幕设备上生效，避免在桌面端出现不必要的滚动条。
 
+#### 3. UI 修复：暗黑模式代码块
+*   **问题背景：** 在暗黑模式下，Markdown 内联代码块 (`<code>`) 的背景颜色过亮，导致代码文本难以辨认。
+*   **解决方案：** 调整了全局 CSS 样式，为暗黑模式下的内联代码块设置了更深的背景色和合适的文字颜色，确保了良好的可读性。
+
 ### v1.1.4 (之前版本)
 #### 1. 内容创建 - 图片上传功能
 *   **需求背景：** 用户在创建博客或笔记时，无法方便地插入本地图片。
