docs: 更新500错误页面、关于页面和项目进度报告
- 修改500错误页面的错误代码和提示信息，增加技术力缺陷说明
- 在关于页面中补充技术栈细节，新增词汇学习分类和联系方式
- 更新项目进度报告，完善目录结构说明和文件描述

--- a/项目进度报告.md
+++ b/项目进度报告.md
@@ -160,7 +160,8 @@
 │   └── build/
 │       └── v1/
 │           ├── config.json
-│           └── edge-functions/
+│           ├── edge-functions/
+│           └── functions/
 ├── .vscode/
 │   ├── extensions.json
 │   └── launch.json
@@ -169,44 +170,44 @@
 ├── package-lock.json
 ├── package.json
 ├── public/
-│   ├── ROC曲线与AUC曲线示意图.png
 │   ├── favicon.svg
 │   ├── preview.jpg
 │   └── uploads/
+│       └── 9da0c162-8b7b-4541-9126-b341a1ea8601.png
 ├── src/
 │   ├── components/
 │   │   ├── AuthorCard.astro
 │   │   ├── PostCard.astro
 │   │   ├── Search.astro
-│   │   └── vocabulary/
+│   │   └── vocabulary/  (与词汇学习功能相关的组件)
 │   ├── content/
-│   │   ├── blog/
-│   │   ├── config.ts
-│   │   ├── notes/
-│   │   └── vocabulary/
+│   │   ├── blog/      (博客文章 Markdown/MDX 文件)
+│   │   ├── config.ts  (Astro 内容集合配置文件)
+│   │   ├── notes/     (学习笔记 Markdown/MDX 文件)
+│   │   └── vocabulary/ (词汇条目 Markdown/MDX 文件)
 │   ├── env.d.ts
 │   ├── integrations/
-│   │   └── search-index.ts
+│   │   └── search-index.ts (站点搜索功能集成)
 │   ├── layouts/
 │   │   ├── Layout.astro
 │   │   └── Layout.d.ts
 │   ├── pages/
-│   │   ├── 500.astro
-│   │   ├── _drafts.astro.stub
+│   │   ├── 500.astro (自定义500错误页面)
+│   │   ├── _drafts.astro.stub (草稿文件存根或示例)
 │   │   ├── about.astro
 │   │   ├── admin.astro
-│   │   ├── api/
-│   │   ├── blog.astro
-│   │   ├── blog/
-│   │   ├── category/
-│   │   ├── create.astro
-│   │   ├── index.astro
-│   │   ├── notes.astro
-│   │   ├── notes/
-│   │   ├── search-data.json.ts
-│   │   ├── tag/
-│   │   ├── tags.astro
-│   │   └── vocabulary.astro
+│   │   ├── api/       (API 端点目录)
+│   │   ├── blog.astro (博客文章列表页面)
+│   │   ├── blog/      (博客文章动态路由, 如 [...slug].astro)
+│   │   ├── category/  (分类页面目录)
+│   │   ├── create.astro (内容创建页面)
+│   │   ├── index.astro (网站首页)
+│   │   ├── notes.astro (学习笔记列表页面)
+│   │   ├── notes/     (学习笔记动态路由)
+│   │   ├── search-data.json.ts (搜索数据API端点)
+│   │   ├── tag/       (标签页面目录)
+│   │   ├── tags.astro (所有标签展示页面)
+│   │   └── vocabulary.astro (词汇学习主页面)
 │   ├── styles/
 │   │   └── global.css
 ├── tailwind.config.mjs
@@ -216,26 +217,48 @@
 
 ### 主要文件说明
 
-* **配置文件**
-  - `astro.config.mjs`: Astro 主配置文件
-  - `tailwind.config.mjs`: Tailwind CSS 配置
-  - `tsconfig.json`: TypeScript 配置
+*   **配置文件**
+    *   `astro.config.mjs`: Astro 主配置文件，定义项目构建、集成、路由等行为。
+    *   `tailwind.config.mjs`: Tailwind CSS 配置文件，用于自定义主题、插件等。
+    *   `tsconfig.json`: TypeScript 配置文件，指定编译选项和项目文件。
 
-* **核心目录**
-  - `public/`: 静态资源目录
-  - `src/content/`: 内容集合(博客、笔记、词汇)
-  - `src/pages/`: 所有页面组件
-  - `src/components/`: 可复用组件
-  - `src/layouts/`: 布局组件
+*   **核心目录**
+    *   `public/`: 存放静态资源，如图片 (`preview.jpg`, `favicon.svg`)、字体等。此目录下的文件会直接复制到构建输出的根目录。
+        *   `uploads/`: 存放用户通过内容创建页面上传的图片，例如 `9da0c162-8b7b-4541-9126-b341a1ea8601.png`。
+    *   `src/`: 项目源代码主目录。
+        *   `components/`: 存放可复用的 Astro 组件 (`.astro` 文件)，如 `PostCard.astro`, `Search.astro`。
+            *   `vocabulary/`: 存放与词汇学习功能相关的特定组件。
+        *   `content/`: 存放 Markdown (或 MDX) 内容集合，由 Astro 的内容集合 API 管理。
+            *   `blog/`: 存放博客文章。
+            *   `notes/`: 存放学习笔记。
+            *   `vocabulary/`: 存放词汇条目。
+            *   `config.ts`: 定义内容集合的 schema 和元数据 (例如字段类型、校验规则)。
+        *   `layouts/`: 存放布局组件 (`Layout.astro`)，用于定义页面的通用结构和样式。 `Layout.d.ts` 可能为其提供类型定义。
+        *   `pages/`: 存放构成网站不同页面的 Astro 组件。文件名和目录结构决定了网站的路由。
+            *   `api/`: 存放 API 端点 (serverless functions)，例如用于处理表单提交或动态数据获取。
+            *   `blog/`, `notes/`: 通常包含动态路由文件 (如 `[...slug].astro`) 用于展示单个博客文章或笔记详情。
+            *   `category/`, `tag/`: 用于展示按分类或标签组织的内容列表的页面或路由。
+        *   `styles/`: 存放全局 CSS 文件 (`global.css`) 及其他样式文件。
+        *   `integrations/`: 存放 Astro 集成，例如 `search-index.ts` 可能用于在构建时生成搜索索引。
+    *   `env.d.ts`: TypeScript 类型声明文件，用于增强对环境变量等的类型支持。
 
-* **重要文件**
-  - `src/pages/create.astro`: 内容创建页面
-  - `src/pages/vocabulary.astro`: 词汇学习页面
-  - `src/pages/api/`: API 端点
-  - `src/styles/global.css`: 全局样式
+*   **重要文件 (部分已在核心目录中说明)**
+    *   `src/pages/index.astro`: 网站首页。
+    *   `src/pages/about.astro`: "关于本站" 页面。
+    *   `src/pages/create.astro`: 内容创建页面，允许用户添加新的博客或笔记。
+    *   `src/pages/vocabulary.astro`: 英语词汇学习功能的主页面。
+    *   `src/pages/admin.astro`: 简单的后台管理页面。
+    *   `src/pages/search-data.json.ts`: 为客户端搜索功能提供数据的 API 端点。
+    *   `src/layouts/Layout.astro`: 主要的页面布局组件，包含页眉、页脚和通用结构。
+    *   `src/content/config.ts`: Astro 内容集合的配置文件，非常重要，用于定义内容的结构和类型。
 
-* **项目文档**
-  - `README.md`: 项目说明
-  - `项目进度报告.md`: 开发历程记录
+*   **项目文档与配置**
+    *   `README.md`: 项目的说明文档，介绍项目概况、如何安装和运行等。
+    *   `项目进度报告.md`: 本文档，记录项目开发历程和版本更新。
+    *   `.gitignore`: 指定 Git 版本控制应忽略的文件和目录。
+    *   `package.json`: Node.js 项目清单文件，包含项目依赖、运行脚本 (如 `dev`, `build`) 等。
+    *   `package-lock.json`: 锁定项目依赖的具体版本，确保构建的一致性。
+    *   `.netlify/`: Netlify 平台相关的配置文件和构建输出，例如边缘函数 (`edge-functions`) 和普通函数 (`functions`)。
+    *   `.vscode/`: Visual Studio Code 编辑器相关的配置，如推荐扩展 (`extensions.json`) 和调试配置 (`launch.json`)。
 
 感谢您的关注！我们将继续努力，让"林大反卷门驻地"成为一个越来越棒的个人空间。
