feat: 调整单词页面UI和开发者功能
- 移除了单词学习页面中的重复"添加单词"按钮，保留并优化了右上角的按钮链接至管理后台的单词添加表单。
- 集成了开发者模式，确保"添加单词"按钮仅在开发者模式激活时可见，并对相关功能项的显示逻辑进行了配置化管理，提高了可维护性。
- 验证了单词添加流程的完整性，确保功能正常工作。

--- a/项目进度报告.md
+++ b/项目进度报告.md
@@ -59,6 +59,16 @@
 *   **问题背景：** 在暗黑模式下，Markdown 内联代码块 (`<code>`) 的背景颜色过亮，导致代码文本难以辨认。
 *   **解决方案：** 调整了全局 CSS 样式，为暗黑模式下的内联代码块设置了更深的背景色和合适的文字颜色，确保了良好的可读性。
 
+#### 4. 单词页面UI与开发者功能调整
+*   **问题定位与修复：**
+    *   移除了单词学习页面 (`/vocabulary`) 中重复的"添加单词"按钮。
+    *   保留了页面右上角的"添加单词"按钮，并确保其链接至管理后台 (`/admin`) 的单词添加表单区域 (`#add-vocabulary-form`)。
+*   **开发者模式集成：**
+    *   将右上角的"添加单词"按钮的显示逻辑与现有的开发者模式进行了集成。该按钮现在仅在开发者模式激活后可见。
+    *   复用了 `Layout.astro` 中的开发者模式控制逻辑 (`localStorage.getItem('dev_mode_active') === 'true'`)。
+    *   对 `Layout.astro` 中的开发者功能项显示/隐藏逻辑进行了初步的配置化管理，将相关元素的ID集中处理，提高了可维护性。
+*   **功能验证：** 确认了单词添加的完整流程（从点击按钮、跳转到表单、表单校验、API调用到成功提示）已在 `/admin` 页面正确实现并可正常工作。
+
 ### v1.1.4 (之前版本)
 #### 1. 内容创建 - 图片上传功能
 *   **需求背景：** 用户在创建博客或笔记时，无法方便地插入本地图片。
@@ -105,10 +115,6 @@
 *   修复了 `src/pages/api/create-content.ts` 中的重复导入 APIRoute 问题。
 *   改进了API错误处理机制，确保返回有效的JSON响应。
 *   增强了前端错误处理逻辑，提供更明确的错误反馈。
-
-#### 3. 用户界面统一
-*   修改了博客页面卡片布局，统一了所有文章卡片的样式和大小。
-*   移除了特色文章的不同样式处理，提供更一致的视觉体验。
 
 #### 4. 开发体验改进
 *   移除了尚未完善的localStorage草稿功能。
